	fixed bug in SWF6 compilation
	allowed either Mysql or Mysql5 usage
	replaced db.Connection.hasFeature by db.Connection.dbName
	added Socket.custom field
	moved neko.Thread to neko.vm.Thread
	define haxe_109 (for api changes)
	fixes in haxe.remoting.Connection and haxe.Unserializer for F9 
	added haxe.remoting.Connection.urlConnect for JS
	allowed private typedef fields
	added neko.net.ThreadServer and ThreadRemotingServer
	removed neko.net.RemotingBuffer

2006-10-29: 1.08
	fixed bug in flash -debug
	fixed Sqlite result .length
	fixed missing "." in OSX/Linux default classpath
	fixed haxelib NDLL autoloading on OSX
	fixed bug in deserialization of "\\\r" sequence
	added inheritance and fields getter/setter to xml output
	haxedoc 2.0
	fixed neko native enum serialization
	fixed "all constructors matched" for enums without params
	fixed returned value semantics in neko (prevent remoting leak)
	more documentation
	added haxe.rtti package (classes can implement haxe.rtti.Infos)
	fixed windows line endings in exclude files under linux/osx
	fixed small bug in "cast" syntax
	added "callback" for partial function application
	added --auto-xml for future haxeFD usage
	fixed Reflect.isFunction
	minor bugfix in JS code generator
	new neko.net package
	allow recursive remoting proxys (skip instead of error)
	added neko.Thread and neko.Lock MultiThread classes
	added neko.net.ServerLoop for multiple clients handling

2006-09-11: 1.07
	fixed resources in Neko
	typedef, override, package and f9dynamic are now keywords
	slighly changed error format output
	fixed "undefined" serialization and Type.typeof
	some fixes in haxelib
	set default classpath for non windows systems
	added variance
	fixed bug in bounded type parameters
	fixed scope bug in try/catch with Flash9
	added remoting over XMLSocket and LocalConnection for Flash9
	fixed Std.is(*,null) = false
	allowed >64K haXe/neko strings
	-debug and stack traces support for Flash and JS
	minor changes in xml output
